--- a/sway/config
+++ b/sway/config
@@ -30,7 +30,15 @@ set $clipboard cliphist list | fuzzel -I -d | cliphist decode | wl-copy
 bindsym $mod+p exec $clipboard
 bindsym $mod+shift+p exec cliphist wipe | notify-send "Clipboard" "Cleared"
 # Lockscreen
-bindsym $mod+Escape exec swaylock --image ~/Pictures/ggdc_wall.png -s fill
+set $lock swaylock --image ~/Pictures/ggdc_wall.png -s fill
+bindsym $mod+Escape exec $lock
+
+#Idle
+exec swayidle -w \
+             timeout 300 $lock \
+             timeout 600 'swaymsg "output * dpms off"' \
+             resume 'swaymsg "output * dpms on"' \
+             before-sleep $lock
 
 # FZF KILL 
 bindsym $mod+delete exec kill_ps
@@ -167,7 +175,7 @@ titlebar_separator disable
 hide_edge_borders smart_no_gaps
 
 ### Colors
-client.focused            #c5c8c6   #1d1f21   #ffffff    #ffffff    #c5c8c6
+client.focused            #c5c8c6   #1d1f21   #00ff00    #ffffff    #00ff00
 client.unfocused          #1d1f21   #1d1f21   #ffffff    #000000    #1d1f21
 client.focused_inactive   #c5c8c6   #1d1f21   #ffffff    #ffffff    #c5c8c6
 
