--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -19,17 +19,17 @@ scrolling:
 tabspaces: 8
 font:
   normal:
-    family: FiraMono Nerd Font Propo
+    family: Noto Mono Nerd Font
     style: Regular
   bold:
-    family: FiraMono Nerd Font Propo
+    family: Noto Mono Nerd Font
     style: Bold
   italic:
-    family: FiraMono Nerd Font Propo
-    style: Medium
+    family: Noto Mono Nerd Font
+    style: Italic
   bold_italic:
-    family: FiraMono Nerd Font Propo
-    style: SemiBold
+    family: Noto Mono Nerd Font
+    style: Bold Italic
   size: 10.5
   offset:
     x: 0
