--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -19,16 +19,16 @@ scrolling:
 tabspaces: 8
 font:
   normal:
-    family: Noto Mono Nerd Font
+    family: CaskaydiaCove Nerd Font Mono
     style: Regular
   bold:
-    family: Noto Mono Nerd Font
+    family: CaskaydiaCove Nerd Font Mono
     style: Bold
   italic:
-    family: Noto Mono Nerd Font
+    family: CaskaydiaCove Nerd Font Mono
     style: Italic
   bold_italic:
-    family: Noto Mono Nerd Font
+    family: CaskaydiaCove Nerd Font Mono
     style: Bold Italic
   size: 10.5
   offset:
