--- a/sway-interactive-screenshot/config.toml
+++ b/sway-interactive-screenshot/config.toml
@@ -4,7 +4,7 @@
 prompt = "📷> "
 
 # Directory in which to save screenshots.
-save_dir = "~/screen/"
+save_dir = "$HOME/Pictures/Screenshots"
 
 # File name format.
 # See: https://docs.python.org/3/library/datetime.html#strftime-and-strptime-format-codes
@@ -17,7 +17,7 @@ type = "png" # "jpeg", "ppm"
 jpeg_quality = 100
 
 # PNG compression level value.
-png_level = 3
+png_level = 1
 
 # Show or hide cursor.
 cursor = true
@@ -32,7 +32,7 @@ prompt = "📹> "
 pid_file = "${XDG_RUNTIME_DIR}/sway-interactive-screenshot.${WAYLAND_DISPLAY}.video.pid"
 
 # Directory in which to save screencast.
-save_dir = "~/screen/"
+save_dir = "$HOME/Pictures/Screenshots"
 
 # File name format.
 # See: https://docs.python.org/3/library/datetime.html#strftime-and-strptime-format-codes
