--- a/sway/config
+++ b/sway/config
@@ -53,22 +53,18 @@ output HDMI-A-1 {
     position 0 0
 }
 
-input "type:touchpad" {
+
+input "type:keyboard" {
+    xkb_numlock enabled
+    xkb_layout "br"
+}
+
+input * {
     tap enabled
     natural_scroll enabled
     pointer_accel 0.3
     accel_profile flat
     scroll_method two_finger
-}
-
-input "type:mouse" {
-    pointer_accel 0.3
-    accel_profile flat
-}
-
-input "type:keyboard" {
-    xkb_numlock enabled
-    xkb_layout "br"
 }
 
 floating_modifier $mod normal
