--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,7 +1,7 @@
 env:
   TERM: xterm-256color
 window:
-  opacity: 0.4
+  opacity: 0.5
   padding:
     x: 1
     y: 1
@@ -16,16 +16,16 @@ scrolling:
 tabspaces: 8
 font:
   normal:
-    family: CaskaydiaCove Nerd Font Mono
+    family: CaskaydiaCove Nerd Font
     style: Regular
   bold:
-    family: CaskaydiaCove Nerd Font Mono
+    family: CaskaydiaCove Nerd Font
     style: Bold
   italic:
-    family: CaskaydiaCove Nerd Font Mono
+    family: CaskaydiaCove Nerd Font
     style: Italic
   bold_italic:
-    family: CaskaydiaCove Nerd Font Mono
+    family: CaskaydiaCove Nerd Font
     style: Bold Italic
   size: 10.5
   offset:
