--- a/sway/config
+++ b/sway/config
@@ -147,7 +147,7 @@ bar {
     font Noto Mono Nerd Font 10
 }
 #toggle bar 
-bindsym $mod+o exec killall -SIGUSR1 waybar
+bindsym $mod+o exec killall -SIGUSR1 waybar | notify-send "Waybar" "Toggle ($mod+o)"
 
 gaps inner 1
 gaps outer 1
