--- a/sway/config
+++ b/sway/config
@@ -175,7 +175,7 @@ exec --no-startup-id pgrep firefox || exec firefox
 workspace 1
 exec --no-startup-id pgrep discord || exec discord
 exec --no-startup-id pgrep teams-for-linux || exec teams-for-linux
-exec --no-startup-id pgrep spotify || exec spotify
+exec --no-startup-id pgrep ncspot || exec alacritty -e tmux new-session -d -s ncspot 'ncspot'
 
 exec brightnessctl set 100% | echo 100 > $WOBSOCK
 include /etc/sway/config.d/*
