--- a/sway/config
+++ b/sway/config
@@ -173,9 +173,11 @@ exec --no-startup-id pgrep alacritty || exec $term -e tmux
 exec --no-startup-id pgrep firefox || exec firefox
 
 workspace 1
+exec --no-startup-id pgrep easyeffects || exec easyeffects
+exec --no-startup-id pgrep ncspot || exec $term --class "spot" -e tmux new-session -d -s ncspot 'ncspot'
 exec --no-startup-id pgrep discord || exec discord
 exec --no-startup-id pgrep teams-for-linux || exec teams-for-linux
-exec --no-startup-id pgrep ncspot || exec alacritty -e tmux new-session -d -s ncspot 'ncspot'
 
 exec brightnessctl set 100% | echo 100 > $WOBSOCK
+
 include /etc/sway/config.d/*
